src/types/tests/snapshots/tgbot__types__tests__forum__create_forum_topic-2.snap
---
source: src/types/tests/forum.rs
expression: actual_data
---
{
  "chat_id": 1,
  "icon_color": 13338331,
  "icon_custom_emoji_id": "emoji-id",
  "name": "topic-name"
}
