src/types/tests/snapshots/tgbot__types__tests__forum__create_forum_topic.snap
---
source: src/types/tests/forum.rs
expression: actual_data
---
{
  "chat_id": 1,
  "name": "topic-name"
}
