src/types/tests/snapshots/tgbot__types__tests__forum__forum_topic-2.snap
---
source: src/types/tests/forum.rs
expression: "expected_struct.with_icon_custom_emoji_id(\"emoji-id\")"
---
{
  "icon_color": 16478047,
  "message_thread_id": 1,
  "name": "topic-name",
  "icon_custom_emoji_id": "emoji-id"
}
