src/types/tests/snapshots/tgbot__types__tests__forum__forum_topic.snap
---
source: src/types/tests/forum.rs
expression: expected_struct.clone()
---
{
  "icon_color": 16478047,
  "message_thread_id": 1,
  "name": "topic-name"
}
